*SVN*

* Add config.active_support for future configuration options.  Also, add more new Rails 3 config settings to new_rails_defaults.rb [rick]

* Add Rails.logger, Rails.root, Rails.env and Rails.cache shortcuts for RAILS_* constants [pratik]

* Allow files in plugins to be reloaded like the rest of the application.  [rick]

  Enables or disables plugin reloading.
  
    config.reload_plugins = true
  
  You can get around this setting per plugin.
  If #reload_plugins? == false (DEFAULT), add this to your plugin's init.rb to make it reloadable:
  
    Dependencies.load_once_paths.delete lib_path
  
  If #reload_plugins? == true, add this to your plugin's init.rb to only load it once:
  
    Dependencies.load_once_paths << lib_path

* Small tweak to allow plugins to specify gem dependencies.  [rick]

  # OLD open_id_authentication plugin init.rb
  require 'yadis'
  require 'openid'
  ActionController::Base.send :include, OpenIdAuthentication

  # NEW
  config.gem "ruby-openid", :lib => "openid", :version => "1.1.4"
  config.gem "ruby-yadis",  :lib => "yadis",  :version => "0.3.4"

  config.after_initialize do
    ActionController::Base.send :include, OpenIdAuthentication
  end

* Added config.gem for specifying which gems are required by the application, as well as rake tasks for installing and freezing gems. [rick]

  Rails::Initializer.run do |config|
    config.gem "bj"
    config.gem "hpricot", :version => '0.6', :source => "http://code.whytheluckystiff.net"
    config.gem "aws-s3", :lib => "aws/s3"
  end
  
  # List required gems.
  rake gems
  
  # Install all required gems:
  rake gems:install
  
  # Unpack specified gem to vendor/gems/gem_name-x.x.x
  rake gems:unpack GEM=bj

* Removed the default .htaccess configuration as there are so many good deployment options now (kept it as an example in README) [DHH]

* config.time_zone accepts TZInfo::Timezone identifiers as well as Rails TimeZone identifiers [Geoff Buesing]
